Add separators with buttons between pages
This required reworking the animation. Instead of making so many assumptions about the DOM, it now updates the React state to rerender. The a useLayoutEffect notices the change and adds the animation after the fact, but before the user can see the change

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,6 +23,7 @@
     "noUncheckedSideEffectImports": true,
     "paths": {
       "@components/*": ["./src/components/*"],
+      "@hooks/*": ["./src/hooks/*"],
       "@util/*": ["./src/util/*"]
     }
   },
